Everything is prepared to create the meeting matcher

--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-  background-color: #d979b3;
+  background-color: #a91cb0;
 }
 
 h1 {
